--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,52 @@
-.App {
+.container {
+   height: 90vh;
+   width: 90vw;
+   margin: 2rem auto;
+   display: grid;
+   grid-template-areas: "header header header"
+                        "main main main"
+                        "footer footer footer";
+   grid-template-rows: 1fr 3fr 1fr;
+   grid-template-columns: 1fr 2fr 1fr;
+}
+
+header {
+  grid-row: 1;
+  grid-column: 1/4;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+main {
+  grid-row: 2;
+  grid-column: 1/4;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+footer {
+  grid-row: 3;
+  grid-column: 1/4;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.cell-1 {
+   background: deepskyblue;
+   grid-area: header;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell-2 {
+   background: orangered;
+   grid-area: left;
+}
+.cell-3 {
+   background: limegreen;
+   grid-area: main;
+}
+.cell-4 {
+   background: gold;
+   grid-area: right;
+}
+.cell-5 {
+   background: blueviolet;
+   grid-area: footer;
+}
+.cell {
+   color: white;
+   font-size: 2.5rem;
+   text-align: center;
+   padding: 4rem;
 }
