--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
+$break-small: 980px;
+$break-large: 981px;
+
+
 .container {
-   height: 90vh;
-   width: 90vw;
+   height: 100vh;
+   width: 100vw;
    margin: 2rem auto;
    display: grid;
    grid-template-areas: "header header header"
@@ -8,6 +12,11 @@
                         "footer footer footer";
    grid-template-rows: 1fr 3fr 1fr;
    grid-template-columns: 1fr 2fr 1fr;
+}
+
+nav {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 header {
@@ -23,6 +32,7 @@ footer {
   grid-row: 3;
   grid-column: 1/4;
   text-align: center;
+  background-image: radial-gradient(farthest-corner at 45px 45px, #40C9CC 0%, #31CC9A 100%);
 }
 .cell-1 {
    background: deepskyblue;
