--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ nav {
     width: 100%;
     max-width: 100%;
     box-shadow: none;
-    background-color: #FC466B;
+    // background-color: #FC466B;
     position: fixed;
     height: 60px!important;
     overflow: hidden;
